Hid Search for now, fixed jump anchor point offsets to compensate for bigger header bar

--- a/css/style.less
+++ b/css/style.less
@@ -191,6 +191,7 @@ body {
 		width: 94%;
 		margin: 0px auto 20px auto;
 		padding: 16px;
+		line-height: 1.5em;
 		
 		h1, hr{
 			margin-left: 0;
@@ -321,6 +322,7 @@ body {
 		}
 		
 		.search {
+			display: none;
 			float: left;
 			width: auto;
 			text-align: left;
@@ -338,6 +340,6 @@ body {
 .jumptarget:before {
   content:"";
   display:block;
-  height:50px; /* fixed header height*/
-  margin:-50px 0 0; /* negative fixed header height */
+  height:100px; /* fixed header height*/
+  margin:-100px 0 0; /* negative fixed header height */
 }
